fix card-details gap

--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,12 @@ picture {
   gap: 24px;
 }
 
+@media screen and (min-width: 626px) {
+  .card-details {
+    gap: 32px;
+  }
+}
+
 .card-texts {
   display: flex;
   align-items: flex-start;
